<resources>
    <string name="app_name">TrackMe</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="create_new_account">Create new account</string>
    <string name="trackme">TrackMe</string>
    <string name="create_an_account">Create an account</string>
    <string name="phone">Phone</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>

</resources>